# mdbook-killer

./: .env  .gitignore  Cargo.toml  README.md  TODO  flake.nix  input.css  leptos_start.css  package-lock.json  rust-toolchain.toml  tailwind.config.js
examples/Prueba/: book.toml
examples/Prueba/src/en/: Readme.md  SUMMARY.md
examples/Prueba2/: book.toml
examples/Prueba2/src/: SUMMARY.md
examples/Prueba2/theme/: chapter_navigator.html  chapter_navigator_item.html
examples/hello-world/: book.toml
examples/hello-world/src/: SUMMARY.md
examples/hello-world/src/deep/: SUMMARY.md
examples/hello-world/src/getting-started/: hello-world.md
examples/hello-world/src/test/: all-features.md  widgets.mdx
examples/hello-world/widgets/: Counter.js
nix/: default.nix  hm-module.nix  nixos-module.nix  overlay.nix
src/: book.rs  cli.rs  command.rs  commands.rs  lib.rs  main.rs  utils.rs
src/commands/: build.rs  clean.rs  create.rs  init.rs  mod.rs  serve.rs
src/default_theme/: chapterpage.rs  chapters_navigator.rs  custom_component.rs  homepage.rs  layout.rs  mod.rs
src/models/: build_config.rs  chapter.rs  config_book.rs  lang_config.rs  mod.rs  preprocessors_config.rs  rust_config.rs
src/renderer/: async_component.rs  mod.rs  render.rs  ssg.rs
src/utils/: mod.rs  safe_remove.rs  to_snake_case.rs
