[package]
name = "mdbook-leptos"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
# cargo-leptos = "0.2.7"
dotenvy = "0.15.7"
git2 = "0.18.2"
inquire = "0.7"
# leptos = "0.6.5"
once_cell = "1.19.0"
serde = { version = "1.0.196", features = ["derive", "serde_derive"] }
toml = "0.8.10"
clap = { version = "4.1.6", features = [
    "derive",
    "color",
    "suggestions",
    "wrap_help",
] }

[lib]
name = "lib"
parh = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"
