[package]
name = "mdbook-killer"
version = "0.0.1"
edition = "2021"

[dependencies]
# leptos = "0.6.5"
# cargo-leptos = "0.2.7"
anyhow = "1.0.79"
git2 = "0.18.2"
inquire = "0.7"
log = "0.4.21"
env_logger = "0.11.3"
clap-verbosity-flag = "2.2.0"
serde = { version = "1.0.196", features = ["derive", "serde_derive"] }
toml = "0.8.10"
clap = { version = "4.1.6", features = [
  "derive",
  "color",
  "suggestions",
  "wrap_help",
] }
clap_complete = "4.5.1"
tokio = { version = "1.38.0", features = ["full"] }
axum = "0.7.5"
webbrowser = "1.0.1"
markdown = "1.0.0-alpha.21"
thiserror = "1.0.64"
